<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/strTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:id="@+id/lblTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPhoneNumLabel"
            android:id="@+id/lblEnterMobileNum"
            android:textSize="20sp"
            android:layout_below="@+id/lblTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhoneNum"
            android:layout_below="@+id/lblTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp"
            android:layout_alignEnd="@+id/editText"
            android:hint="@string/strPhoneNumHint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTuneLabel"
            android:id="@+id/lblEnterNewTune"
            android:textSize="20sp"
            android:layout_below="@+id/txtPhoneNum"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/strTuneHint"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText"
            android:lines="3"
            android:layout_below="@+id/lblEnterNewTune"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strValidateButton"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btnValidate"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPreviewButton"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btnPreview"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSendButton"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btnSend"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/editText"
            android:layout_alignEnd="@+id/editText"/>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_rotate"/>

</android.support.design.widget.CoordinatorLayout>
